IMP add email no notify

--- a/infrastructure/view/instance_update_view.xml
+++ b/infrastructure/view/instance_update_view.xml
@@ -26,6 +26,7 @@
                     </group>
                     <group>
                         <field name="date"/>
+                        <field name="run_after"/>
                         <field name="user_id"/>
                         <field name="notify_email"/>
                     <!-- <field name="instance_ids"/> -->
@@ -39,7 +40,7 @@
                 </group>
                 <button name="%(action_instance_update_add_instances)d" string="Add Repositories" type="action" states="draft"/>
                 <field name="detail_ids">
-                    <tree editable="bottom">
+                    <tree editable="bottom" create="false">
                         <field name="instance_id"/>
                         <field name="server_id"/>
                         <field name="state"/>
