IMP add prefix on instance type

--- a/infrastructure/view/database_type_view.xml
+++ b/infrastructure/view/database_type_view.xml
@@ -57,6 +57,8 @@
                         </div>
                         <field name="db_filter"/>
                         <field name="server_mode_value"/>
+                        <field name="odoo_run_prefix"/>
+                        <field name="postgres_run_prefix"/>
                     </group>
                     <group string="Database Parameters">
                         <field name="backups_enable"/>
