--- a/infrastructure_contract/views/product_template_view.xml
+++ b/infrastructure_contract/views/product_template_view.xml
@@ -3,11 +3,10 @@
     <data>
         <record id="product_template_form_view" model="ir.ui.view" >
              <field name="model">product.template</field>
-             <field name="inherit_id" ref="product.product_template_form_view" />
+             <field name="inherit_id" ref="adhoc_modules_server.product_template_form_view" />
              <field name="arch" type="xml">
-                <field name="company_id" position="before">
+                <field name="adhoc_product_dependency_ids" position="after">
                     <field name="contracted_quantity_expression"/>
-                    <button name="test_contracted_quantity_expression" type="object" string="Test" help="Test expression in this database"/>
                 </field>
             </field>
         </record>
