--- a/infrastructure_contract/views/account_analytic_account_view.xml
+++ b/infrastructure_contract/views/account_analytic_account_view.xml
@@ -9,7 +9,25 @@
     <!-- <field name="inherit_id" ref="analytic.view_account_analytic_account_form"/> -->
     <field name="arch" type="xml">
         <button name="recurring_create_invoice" position="after">
-            <button class="oe_link" name="update_lines_data_from_database" attrs="{'invisible': [('recurring_invoices','!=',True)]}" string="⇒ Update quantity from database" type="object" groups="base.group_no_one"/>
+            <button
+                name="update_lines_data_from_database"
+                string="⇒ Update from remote DB"
+                help="Update lines from remote database (a production database linked to this contract)"
+                class="oe_link"
+                attrs="{'invisible': [('recurring_invoices','!=',True)]}"
+                type="object"
+                groups="base.group_no_one"
+                />
+            <button
+                name="update_remote_contracted_products"
+                string="⇒ Update remote DB"
+                help="Update contracted products on remote database (a production database linked to this contract)"
+                class="oe_link"
+                attrs="{'invisible': [('recurring_invoices','!=',True)]}"
+                type="object"
+                groups="base.group_no_one"
+                />
+            <!-- <button class="oe_link" name="update_remote_database_contract" attrs="{'invisible': [('recurring_invoices','!=',True)]}" string="⇒ Update quantity from database" type="object" groups="base.group_no_one"/> -->
         </button>
 
         <div name="buttons">
