--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -113,6 +113,7 @@
                                 string="⇒ View Password"
                                 type="object"
                                 class="oe_link"/>
+                        <field name="key_filename"/>
                         </div>
                     </group>
                     <group>
