--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -323,9 +323,9 @@
 <menuitem
     name="Instances"
     id="menu_instances"
-    sequence="30"
+    sequence="40"
     action="action_infrastructure_instance_instances"
-    parent="menu_infra_main"
+    parent="menu_infrastructure"
     groups="group_user"
     />
 
