--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -337,9 +337,9 @@
 <menuitem
     name="Servers"
     id="menu_servers"
-    sequence="10"
+    sequence="20"
     action="action_infrastructure_server_servers"
-    parent="menu_infra_main"
+    parent="menu_infrastructure"
     groups="group_user"
     />
 
