IMP add login with user

--- a/infrastructure/view/database_user_view.xml
+++ b/infrastructure/view/database_user_view.xml
@@ -12,6 +12,7 @@
             <field name="login"/>
             <field name="name"/>
             <field name="partner_id"/>
+            <button name="open_signup_url" type="object" icon="gtk-go-forward"/>
         </tree>
     </field>
 </record>
